--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,11 @@ html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul{
     list-style: none;
 }
 img{
-    max-width: 800px;
+    max-width: 200px;
+}
+
+.secaoContato .flex-col{
+    width: 250px;
 }
 div.flex{
     display: flex;
@@ -61,7 +65,71 @@ div.container{
     margin:0 auto;
 }
 /* GERAL */
-  
+
+section.secaoContato{
+    background-color: #DCDCDC;
+    padding-bottom: 50px;
+}
+section.secaoContato .flex{
+    color: #303030;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    line-height: 2;
+}
+
+section.secaoContato h2{
+    color: black;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    padding-top: 50px;
+    padding-bottom: 30px;
+    font-weight: 700;
+    bottom: 150px;
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: #303030;
+}
+
+.form-input-model{
+    line-height: 3;
+}
+.form-input-model #nome, #email {
+    width: 100%;
+    height: 30px;
+    border: 1px solid #818181;
+    border-radius: 5px;
+}
+.form-input-model #mensagem{
+    width: 100%;
+    height: 50px;
+    border: 1px solid #818181;
+    border-radius: 5px;
+    
+}
+.form-input-model ::placeholder{
+    text-align: left;
+}
+
+.form-input-model label{
+    display: none;
+}
+
+.secaoContato form .btn-send{
+    float: right;
+    border: 1px solid #818181;
+    border-radius: 5px;
+    width: 50px;
+    height: 30px;
+}
+
+
+
+
 /* HTML */
 html{}
 /* HTML */
@@ -75,7 +143,14 @@ header{}
 /* HEADER */
   
 /* FOOTER */
-footer{}
+footer{
+    text-align: center;
+    padding: 5%;
+}
+
+footer img{
+    width: 30px;
+}
 /* FOOTER */
 
 /* INICIAL */
@@ -99,5 +174,21 @@ main{}
 /* MEDIA QUERIES */
     @media screen and (min-width: 400px) {}
   
-    @media screen and (min-width: 800px) {}
+    @media screen and (min-width: 800px) {
+        footer{
+            text-align: center;
+            padding: 5%;
+        }
+
+        section.secaoContato .flex{
+            color: #303030;
+            width: 100%;
+            flex-direction: row;
+            align-items: center;
+            margin: 0 auto;
+            line-height: 2;
+            justify-content: space-around;
+        }
+
+    }
 /* MEDIA QUERIES */
