--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,11 +55,96 @@ div.full-container{
     max-width: 1850px;
     margin:0 auto;
 }
-
+/* INICIANDO SEÇÃO SOBRE */
 .secaoSobre img{ 
 
-        width: 200px;
+        width: 150px;
 }
+
+.secaoSobre {
+    display: flex;
+    justify-content: center;
+}
+.secaoSobre .flex{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.secaoSobre .flex .flex-col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 50px;
+    padding-left: 50px;
+
+}
+
+.secaoSobre .flex .flex-col-4 h2{
+text-align: center;
+padding-bottom: 50px;
+}
+
+.secaoSobre .flex .flex-col-3, .flex-col-4{
+    background-color: #e5e5e5;
+}
+.secaoSobre .flex .flex-col-1 h2{
+    padding-top: 50px;
+    text-align:left;
+    font-size: 24px;
+    padding-bottom: 50px;
+}
+
+.secaoSobre .flex .flex-col-1 p{
+    color: #303030;
+    font-size: 19px;
+    margin-bottom: 40px;
+    text-align: left;
+}
+
+.secaoSobre .flex .flex-col-1 span{
+    color: #818181;
+    font-size: 17px;
+    text-align: left;
+    margin-bottom: 50px;
+}
+
+.secaoSobre .flex .flex-col-4 ul{
+    padding-bottom: 50px;
+    list-style-type: circle;
+}
+
+.secaoSobre .flex .flex-col-4 ul li{
+    margin-bottom: 15px;
+}
+
+.secaoSobre .flex .flex-col-1 button{
+    color: #303030;
+    border: 1px solid #818181;
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: transparent;
+    font-size: 17px;
+    text-align: left;
+    cursor: pointer;
+    padding: .5rem 3.8rem;
+}
+
+.secaoSobre .flex .flex-col-2 figure img{
+width: 300px;
+}
+
+.secaoSobre .flex figcaption{
+    display: none;
+}
+.secaoSobre .flex .flex-col-3 img{
+    width: 100px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
 
 header img {
     width: 200px;
@@ -142,6 +227,7 @@ a{
 }
 
 .secaoCursos article{
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -170,7 +256,7 @@ section.secaoCursos article ul li img{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
 }
 
 .secaoCursos article ul li p{
@@ -214,7 +300,7 @@ section.secaoCursos article ul li img{
 }
 .calendario li{
     display: flex;
-    width: 250px;
+    width: 220px;
     flex-direction: column;
     justify-content: center;
     border: 1px solid black;
@@ -256,7 +342,7 @@ section.secaoCursos article ul li img{
     background-color: #007aff;
 }
 .calendario li p{
-
+    text-align: center;
     color: #818181;
     font-size: 15px;
     line-height: 1.7;
@@ -264,8 +350,6 @@ section.secaoCursos article ul li img{
     border-bottom: 1px solid #c0c0c0;
     margin-bottom: 20px;
 }
-
-
 
 /* FOOTER */
 footer{
@@ -318,6 +402,52 @@ footer img{
         .calendario li{
             margin: 20px;
         }
+
+        /* SEÇÃO DE CURSOS DESKTOP */
+        .secaoCursos article ul{
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        
+        }
+        
+        .secaoCursos article ul li{
+            flex-basis: 30%;
+            flex-grow: 1;
+        }
+        .secaoCursos article ul li p{
+            margin: 0 10px;
+        }
+        /* SECAO SOBRE DESKTOP */
+        .secaoSobre .flex {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        .secaoSobre .flex .flex-col {
+            flex-basis: 50%;
+            padding: 50px 50px 50px 0;
+        }
+        .secaoSobre .flex .flex-col-3 img {
+            width: 200px;
+            padding:20px;
+        }
+
+        .secaoSobre .flex .flex-col-1 {
+            padding:0;
+            padding-left: 50px;
+            padding-bottom: 50px;
+        }
+        .secaoSobre .flex .flex-col-2 figure img {
+            width: 400px;
+        }
+        .secaoSobre .flex .flex-col-2{
+            padding-right: 0;
+        }
+
+
+    }
+}
 
 
     }
