--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,79 @@ div.full-container{
     max-width: 1850px;
     margin:0 auto;
 }
+
+.topo {
+    background-color: #00043e;
+    height: 65px;
+    width: 100%;
+}
+​
+.large-container {
+    position: relative;
+    width: 100%;
+}
+​
+.large-container .logo img{
+    left: 5%;
+    top: 5px;
+    width: 55px;
+    margin: 5px 0 5px 5px;
+    
+}
+​
+nav {
+    font-size: 13px;
+    display: none;
+}
+​
+.menuBars img {
+    position: absolute;
+    right: 5%;
+    top: 2%;
+    width: 30px;
+    margin: 10px 10px 0 0;
+}
+​
+.secaoDestaque {
+    display: flex;
+    height: 200px;
+    position: relative;
+}
+​
+.destaque1{
+    font-weight: 400;
+    height: 100px;
+    flex-direction: row;
+    color: white;
+    flex-wrap: wrap;
+    
+    text-align: center;
+    max-width: 210px;
+}
+​
+.secaoDestaque p {
+    font-weight: 100;
+    color: white;
+    position: absolute;
+    font-size: 17px;
+    text-align: center;
+    top: 113px;
+}
+​
+.secaoDestaqueFormulario {
+    position: absolute;
+    top: 155px;
+    left: 50%;
+    transform: translateX(-60%);
+}
+​
+.secaoDestaqueFormulario button{
+    position: absolute;
+    top: 0px;
+    left: 100%;
+    transform: translateX(-60%);
+}
+
 /* INICIANDO SEÇÃO SOBRE */
 .secaoSobre img{ 
 
