--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ div.container{
 
 .secaoDestaque h2 span {
     display: block;
-    
+
 }
 
 .secaoDestaque p {
@@ -458,7 +458,7 @@ footer img{
        /* HEADER E DESTAQUE */
        
        .topBackground {
-        background-image: url('/assets/img/background-destaque.webp');
+        background-image: url('/assets/img/background-destaque\ \(1\).png');
         width: 100%;
         height: 500px;
         background-repeat: no-repeat;
@@ -513,8 +513,8 @@ footer img{
       }
       
       .secaoDestaque {
-          position: relative;
-          background-color: transparent;
+        position: relative;
+        background-color: transparent;
       }
 
       .secaoDestaque h2 {
