--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,7 +458,7 @@ footer img{
        /* HEADER E DESTAQUE */
        
        .topBackground {
-        background-image: url('/assets/img/background-destaque\ \(1\).png');
+        background-image: url('/assets/img/background-destaque.webp');
         width: 100%;
         height: 500px;
         background-repeat: no-repeat;
